--- a/src/index.html
+++ b/src/index.html
@@ -15,15 +15,14 @@
   x-data="initializeContext()"
   x-init="() => {
     initializeReport()
-    $watch('selectedFactSheetType', () => { modalOpened = false; fetchGraphqlData() })
+    $watch('selectedFactSheetType', () => fetchGraphqlData())
     $watch('averageCompletion', () => updateChart())
-  }"
-  @keydown.escape="modalOpened = false">
+  }">
   <div class="container mx-auto text-md text-gray-800">
     <div class="flex justify-end py-2">
       <button
         class="text-xs bg-blue-500 hover:bg-blue-700 text-white font-bold py-1 px-2 rounded"
-        @click="modalOpened = true">
+        @click="openReportConfigurationModal">
         Configure Report
       </button>
     </div>
@@ -36,42 +35,5 @@
         <canvas x-ref="chartCanvas" />
       </div>
   </div>
-  <!-- modal overlay -->
-  <div
-    class="overflow-auto"
-    style="background-color: rgba(0,0,0,0.5)"
-    x-show="modalOpened"
-    :class="{ 'absolute inset-0 z-10 flex items-center justify-center': modalOpened }">
-    <!-- modal -->
-    <div
-      class="bg-white shadow-2xl rounded m-4 sm:m-8"
-      x-show="modalOpened"
-      @click.away="modalOpened = false">
-      <div class="flex justify-between items-center border-b p-2 text-xl">
-        <div class="text-md font-bold">Report configuration</div>
-        <button type="button" @click="modalOpened = false">✖</button>
-      </div>
-      <div class="p-3">
-        <!-- modal content -->
-        <div class="w-full px-3">
-          <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-state">
-            FactSheet Type
-          </label>
-          <div class="relative">
-            <select
-              class="block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-              x-model="selectedFactSheetType">
-              <template x-for="(factSheetType, index) in factSheetTypes" :key="index">
-                <option :key="factSheetType" :value="factSheetType" x-text="lx.translateFactSheetType(factSheetType, 'plural')"></option>
-              </template>
-            </select>
-            <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
-              <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/></svg>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div><!-- /modal -->
-  </div><!-- /modal overlay -->
 </body>
 </html>
